| Summary: | ASTERISK-22001: Running monitors crash Asterisk when a monitored channel leaves a bridge. | ||
| Reporter: | Jonathan Rose (jrose) | Labels: | |
| Date Opened: | 2013-07-02 13:01:53 | Date Closed: | 2013-07-07 16:38:03 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Bridges/bridge_simple Resources/res_monitor |
| Versions: | SVN 12 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Ubuntu 12.04 64-bit | Attachments: | ( 0) backtrace_monitor_crash |
| Description: | If a Monitor is running on a channel in a simple bridge for any reason (application, manager action, bridge dtmf feature) and that channel is removed from the bridge, a stasis-heavy segfault occurs. See the attached backtrace for more details.
Simplest method of duplication: exten => 01,1,Monitor(wav,fishtest) exten => 01,n,Dial(SIP/B) SIP A dials 01 SIP B picks up run following CLI command: > bridge kick <bridge name> <SIP/A channel> The segfault should occur. | ||
| Comments: | |||